--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       Number of People:
       <input id="number_of_people" class="input-styling" type="number" /> To
       Back Seat:
-      <input id="to_back_seat" class="input-styling" type="number" /> To Driver:
+      <input id="change" class="input-styling" type="number" /> To Driver:
       <input id="to_driver" class="input-styling" type="number" />
       <button id="btn">Calculate</button>
     </div>
