--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
       Forward:
       <input id="money_sent_forward" class="input-styling" type="number" />
       Number of People:
-      <input id="number_of_people" class="input-styling" type="number" /> To
-      Back Seat:
+      <input id="number_of_people" class="input-styling" type="number" /> Change:
       <input id="change" class="input-styling" type="number" /> To Driver:
       <input id="to_driver" class="input-styling" type="number" />
       <button id="btn">Calculate</button>
